@@ -4,6 +4,7 @@ Log:
 
 - 12/09/2006, version 0.0.6: roms
 	- fixed buffer overflow in ticonv_charset_utf16_to_ti
+	- implemented ticonv_utf16_to_ti89tusb call
 
 - 07/07/2006, version 0.0.5: roms
 	- added 0x5d0x40 => IDList detokenization (TI84+)
